# deploy-django

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  lint.yml
config/: settings.py
